// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feedback should indicate active smiley 1`] = `
<div>
  <div
    class="text-center"
  >
    <p>
      Tell us what you think about Payer Space.
    </p>
    <div
      class="btn-group"
      role="group"
    >
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-smile"
        />
        <span
          class="sr-only"
        >
          Smiley face
        </span>
      </button>
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-meh"
        />
        <span
          class="sr-only"
        >
          Meh face
        </span>
      </button>
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-frown"
        />
        <span
          class="sr-only"
        >
          Frowny face
        </span>
      </button>
    </div>
    <div
      class="invalid-feedback"
    >
      Please select one of the faces above
    </div>
    <textarea
      aria-label="Please provide any feedback, requests, and/or defects."
      class="mt-3 form-control"
      placeholder="Feedback? Requests? Defects? (optional)"
    />
    <div
      class="mt-3 text-right"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Feedback should render 1`] = `
<div>
  <div
    class="text-center"
  >
    <p>
      Tell us what you think about Payer Space.
    </p>
    <div
      class="btn-group"
      role="group"
    >
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-smile"
        />
        <span
          class="sr-only"
        >
          Smiley face
        </span>
      </button>
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-meh"
        />
        <span
          class="sr-only"
        >
          Meh face
        </span>
      </button>
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-frown"
        />
        <span
          class="sr-only"
        >
          Frowny face
        </span>
      </button>
    </div>
    <div
      class="invalid-feedback"
    >
      Please select one of the faces above
    </div>
    <textarea
      aria-label="Please provide any feedback, requests, and/or defects."
      class="mt-3 form-control"
      placeholder="Feedback? Requests? Defects? (optional)"
    />
    <div
      class="mt-3 text-right"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Feedback should render custom button color 1`] = `
<div>
  <div
    class="text-center"
  >
    <p>
      Tell us what you think about Payer Space.
    </p>
    <div
      class="btn-group"
      role="group"
    >
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-smile"
        />
        <span
          class="sr-only"
        >
          Smiley face
        </span>
      </button>
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-meh"
        />
        <span
          class="sr-only"
        >
          Meh face
        </span>
      </button>
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-frown"
        />
        <span
          class="sr-only"
        >
          Frowny face
        </span>
      </button>
    </div>
    <div
      class="invalid-feedback"
    >
      Please select one of the faces above
    </div>
    <select
      class="custom-select"
      type="select"
    >
      <option
        value="this space"
      >
        This Payer Space
      </option>
      <option
        value="that space"
      >
        That Payer Space
      </option>
      <option
        value="portal"
      >
        Portal as a whole
      </option>
      <option
        value="availity"
      >
        Availity as a whole
      </option>
    </select>
    <textarea
      aria-label="Please provide any feedback, requests, and/or defects."
      class="mt-3 form-control"
      placeholder="Feedback? Requests? Defects? (optional)"
    />
    <div
      class="mt-3 text-right"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Feedback should render custom face icons 1`] = `
<div>
  <div
    class="text-center"
  >
    <p>
      Tell us what you think about Payer Space.
    </p>
    <div
      class="btn-group"
      role="group"
    >
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-happy"
        />
        <span
          class="sr-only"
        >
          Happy face
        </span>
      </button>
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-okay"
        />
        <span
          class="sr-only"
        >
          Okay face
        </span>
      </button>
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-sad"
        />
        <span
          class="sr-only"
        >
          Sad face
        </span>
      </button>
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-confused"
        />
        <span
          class="sr-only"
        >
          Confused face
        </span>
      </button>
    </div>
    <div
      class="invalid-feedback"
    >
      Please select one of the faces above
    </div>
    <textarea
      aria-label="Please provide any feedback, requests, and/or defects."
      class="mt-3 form-control"
      placeholder="Feedback? Requests? Defects? (optional)"
    />
    <div
      class="mt-3 text-right"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Feedback should set the feedback text value 1`] = `
<div>
  <div
    class="text-center"
  >
    <p>
      Tell us what you think about Payer Space.
    </p>
    <div
      class="btn-group"
      role="group"
    >
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-smile"
        />
        <span
          class="sr-only"
        >
          Smiley face
        </span>
      </button>
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-meh"
        />
        <span
          class="sr-only"
        >
          Meh face
        </span>
      </button>
      <button
        class="btn btn-light"
        style="font-size: 1.4em; padding: .2em .4em;"
        type="button"
      >
        <span
          class="icon icon-frown"
        />
        <span
          class="sr-only"
        >
          Frowny face
        </span>
      </button>
    </div>
    <div
      class="invalid-feedback"
    >
      Please select one of the faces above
    </div>
    <textarea
      aria-label="Please provide any feedback, requests, and/or defects."
      class="mt-3 form-control"
      placeholder="Feedback? Requests? Defects? (optional)"
    />
    <div
      class="mt-3 text-right"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Send
      </button>
    </div>
  </div>
</div>
`;
